--- a/templates/pages/instructions.html
+++ b/templates/pages/instructions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="../static/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <p>Anti Drowsy Driving</p>
+        <p><a href="/">Anti Drowsy Driving</a></p>
         <ul>
             <li><a href="/">Home ▼</a>
             <ul>
@@ -24,6 +24,29 @@
         </ul>
     </nav>
     
-    <h1>Instructions</h1>
+    <h1>INSTRUCTIONS (how to download app)</h1>
+    <ol>
+        <li>
+            1. {{ first }}
+        </li>
+        <li>
+            2. {{ second }}
+        </li>
+        <li>
+            3. {{ third }}
+        </li>
+        <li>
+            4. {{ fourth }}
+        </li>
+        <li>
+            5. {{ fifth }}
+        </li>
+        <li>
+            6. {{ sixth }}
+        </li>
+        <li>
+            <img src="{{ windows_defender }}" alt="windows_defender">
+        </li>
+    </ol>
 </body>
 </html>
