--- a/static/styles.css
+++ b/static/styles.css
@@ -22,6 +22,10 @@ nav p {
     padding: 0px 20px;
 }
 
+nav p a {
+    text-decoration: none;
+}
+
 nav ul {
     float: left;
 }
@@ -44,9 +48,9 @@ nav ul li a {
 nav ul li ul {
     display: none;
     position: absolute;
-    background-color: #fff;
     padding: 10px;
     border-radius: 0px 0px 4px 4px;
+    background-color: rgb(0, 255, 21);
 }
 
 nav ul li:hover ul {
@@ -63,7 +67,7 @@ nav ul li ul li a {
 }
 
 nav ul li ul li a:hover {
-    background-color: #f3f3f3;
+    background-color: rgb(0, 234, 255);
 }
 
 .drowsy-pic {
