--- a/templates/pages/why.html
+++ b/templates/pages/why.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <p>Anti Drowsy Driving</p>
+       <p><a href="/">Anti Drowsy Driving</a></p>
         <ul>
             <li><a href="/">Home ▼</a>
             <ul>
