--- a/templates/pages/instructions.html
+++ b/templates/pages/instructions.html
@@ -47,6 +47,9 @@
         <li>
             <img src="{{ windows_defender }}" alt="windows_defender">
         </li>
+        <li>
+            7. {{ seventh }}
+        </li>
     </ol>
 </body>
 </html>
