--- a/static/style.css
+++ b/static/style.css
@@ -4,13 +4,13 @@
 }
 
 body {
-    background-color: rgb(0, 234, 255);
+    background-color: rgb(255, 223, 181);
 }
 
 nav {
     width: 100;
     height: 60px;
-    background-color: rgb(0, 255, 21);
+    background-color: rgb(252, 145, 3);
 }
 
 nav p {
@@ -24,6 +24,7 @@ nav p {
 
 nav p a {
     text-decoration: none;
+    color: rgb(0, 0, 0);
 }
 
 nav ul {
@@ -50,7 +51,7 @@ nav ul li ul {
     position: absolute;
     padding: 10px;
     border-radius: 0px 0px 4px 4px;
-    background-color: rgb(0, 255, 21);
+    background-color: rgb(252, 145, 3);
 }
 
 nav ul li:hover ul {
@@ -67,7 +68,7 @@ nav ul li ul li a {
 }
 
 nav ul li ul li a:hover {
-    background-color: rgb(0, 234, 255);
+    background-color: rgb(255, 223, 181);
 }
 
 h1 {
@@ -75,11 +76,21 @@ h1 {
     font-size: 3em;
     padding-left: 20px;
     padding-top: 15px;
+    text-align: center;
+}
+
+ol li h2 {
+    font-family: arial;
+    font-size: 3em;
+    padding-top: 15px;
+    text-align: center;
 }
 
 ol li {
     font-size: 1em;
     font-family: arial;
-    padding-left: 45px;
+    padding-left: 450px;
     padding-bottom: 14px;
+    padding-top: 14px;
+    padding-right: 500px;
 }
