--- a/templates/pages/instructions.html
+++ b/templates/pages/instructions.html
@@ -24,8 +24,13 @@
         </ul>
     </nav>
     
-    <h1>INSTRUCTIONS (how to download app)</h1>
+    <h1>INSTRUCTIONS</h1>
     <ol>
+        <li>
+            <h2>
+                How to Download App
+            </h2>
+        </li>
         <li>
             1. {{ first }}
         </li>
@@ -49,6 +54,42 @@
         </li>
         <li>
             7. {{ seventh }}
+        </li>
+
+        <li>
+            <h2>How to use the App properly</h2>
+        </li>
+
+        <li>
+            1. {{ proper_one }}
+        </li>
+        <li>
+            <img src="{{ right_or_wrong_face }}" alt="proper lighting techniques">
+        </li>
+        <li>
+            2. {{ proper_two }}
+        </li>
+        <li>
+            <img src="{{ right_or_wrong_way }}" alt="proper camera angle techniques">
+        </li>
+        <li>
+            3. {{ proper_three }}
+        </li>
+        <li>
+            <img src="{{ proper_detection }}" alt="proper camera angle techniques">
+        </li>
+        <li>
+            4. {{ proper_four }}
+        </li>
+        <li>
+            <p>
+
+            </p>
+        </li>
+        <li>
+            <p>
+
+            </p>
         </li>
     </ol>
 </body>
