--- a/templates/pages/troubleshoot.html
+++ b/templates/pages/troubleshoot.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="../../static/troubleshoot.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/jpg" href="{{ ADDPlus_icon }}"/>
     <title>Troubleshoot</title>
 </head>
 <body>
     <nav>
-        <p><a href="/">Anti Drowsy Driving</a></p>
+        <img src="{{ ADDPlus_icon }}" alt="drowsy_icon">
+        <p><a href="/"><strong>Anti-Drowsy Driving Plus (ADD+)</strong></a></p>
+        
         <ul>
-            <li><a href="/">Home ▼</a>
+            <li><strong><a href="/">Home ▼</a></strong>
             <ul>
-                    <li><a href="/troubleshoot">Troubleshoot</a></li>
-                    <li><a href="/instructions">Instructions</a></li>
-                    <li><a href="/download">Download</a></li>
-                </ul>
+                    <li><strong><a href="/troubleshoot">Troubleshoot</a></strong></li>
+                    <li><strong><a href="/instructions">Instructions</a></strong></li>
+                    <li><strong><a href="/download">Download</a></strong></li>
+            </ul>
             </li>
-            <li><a href="/why">Why</a></li>
-            <li><a href="/how">How</a></li>
-            <li><a href="/about">About</a></li>
+            <li><strong><a href="/why">Why</a></strong></li>
+            <li><strong><a href="/how">How</a></strong></li>
+            <li><strong><a href="/about">About</a></strong></li>
         </ul>
     </nav>
-    
-    <h1>Troubleshoot</h1>
-    <p>Log into your GMAIL account to continue to our email listings and report an issue.</p>
-    <a href="https://groups.google.com/g/anti-drowsy-app">Post Issues</a>
+    <!-- <div class="space">
+    <p>   
+    </p>
+    </div> -->
+    <h1>
+
+    </h1>
+    <div>
+        <span><b>TROUBLESHOOT</b></span>
+    </div>
+        <p>Log into your GMAIL account to continue to our email listings and report an issue.</p>
+        <a href="https://groups.google.com/g/anti-drowsy-app">Post Issues</a>
+
 </body>
 </html>
