--- a/templates/index.html
+++ b/templates/index.html
@@ -5,27 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/jpg" href="{{ ADDPlus_icon }}"/>
     <title>Anti Drowsy Driving</title>
 </head>
 <body>
     <nav>
-        <p>Anti Drowsy Driving</p>
+        <img src="{{ ADDPlus_icon }}" alt="drowsy_icon">
+        <p><a href="/"><strong>Anti-Drowsy Driving Plus (ADD+)</strong></a></p>
         <ul>
-            <li><a href="/">Home ▼</a>
+            <li><strong><a href="/">Home ▼</a></strong>
             <ul>
-                    <li><a href="/troubleshoot">Troubleshoot</a></li>
-                    <li><a href="/instructions">Instructions</a></li>
-                    <li><a href="/download">Download</a></li>
-                </ul>
+                    <li><strong><a href="/troubleshoot">Troubleshoot</a></strong></li>
+                    <li><strong><a href="/instructions">Instructions</a></strong></li>
+                    <li><strong><a href="/download">Download</a></strong></li>
+            </ul>
             </li>
-            <li><a href="/why">Why</a></li>
-            <li><a href="/how">How</a></li>
-            <li><a href="/about">About</a></li>
+            <li><strong><a href="/why">Why</a></strong></li>
+            <li><strong><a href="/how">How</a></strong></li>
+            <li><strong><a href="/about">About</a></strong></li>
         </ul>
     </nav>
 
-    <h1>This is the Anti Drowsy Detector(DDD)</h1>
-    <img src="{{ drowsy_image }}" alt="Drowsy Cartoon Image">
+    <p>
+
+    </p>
+    <div>
+        <span><b>This is my Anti-Drowsy Driving Plus (ADD+) Desktop App</b></span>
+    </div>
 
 </body>
 </html>
