--- a/templates/index.html
+++ b/templates/index.html
@@ -26,12 +26,25 @@
         </ul>
     </nav>
 
-    <p>
+    <h4>
 
-    </p>
-    <div>
+    </h4>
+    <h1>
         <span><b>This is my Anti-Drowsy Driving Plus (ADD+) Desktop App</b></span>
+    </h1>
+
+    <div class="home_img">
+        <img src="{{ home_image }}" alt="home_image">
     </div>
+
+    <div class="home_body">
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim dolor amet reiciendis est molestiae hic quam nisi, necessitatibus accusantium, explicabo, officiis aperiam architecto suscipit odio laboriosam consequatur quod optio corporis.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem provident sapiente velit, modi hic expedita nisi incidunt veritatis, laboriosam nemo necessitatibus facere unde optio voluptatum. Corrupti odio eaque ex reiciendis.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex deleniti veritatis hic, quae id quas? Voluptatibus magnam accusantium ex neque, necessitatibus, molestiae voluptas corporis laboriosam explicabo ducimus vitae hic similique!
+        </p>
+    </div>
+    
 
 </body>
 </html>
