--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -26,11 +26,52 @@
             <li><strong><a href="/about">About</a></strong></li>
         </ul>
     </nav>
-    <p>
-        
-    </p>
-    <div>
+    <h4>
+
+    </h4>
+    <h1>
         <span><b>ABOUT</b></span>
+    </h1>
+
+    <div class="about_img">
+            <img src="{{ about_image }}" alt="about_image">
     </div>
+
+    <div class="about_body">
+
+        <div class="about_par">
+            <p>
+                My name is Jora Singh Nahal; I am a grade 7 student at an Elementary School in BC, Canada. I have a strong passion for STEM and sports, which is evident from the fact that I have won 11 prestigious STEM awards at the national and regional levels, and more than a dozen awards in multiple sports. I am an active member of the leadership committee at my Elementary School, and I also enjoy spending fun time with my family and friends.
+            </p>
+        </div>
+
+        <div class="about_par">
+        <p>
+            I have been doing Regional Science Fairs since grade 4 where I have won two gold medals, two best-category awards—Best Novice Project Award twice, and was featured in sd73 news:
+            <a href="https://www.sd73.bc.ca/Modules/News/index.aspx?newsId=8e51b4aa-4adb-45e2-8881-4a79421ac9f6" target="_blank">https://www.sd73.bc.ca/Modules/News/index.aspx?newsId=8e51b4aa-4adb-45e2-8881-4a79421ac9f6</a>
+        </p>
+        </div>
+
+        <div class="about_par">
+        <p>
+            And, since grade 2, I have also been participating and have won 7 regional and national awards in three different regional and national-level math competitions: Math Kangaroo Canada, Mathematica Centrum, and District Math Challenge. I was featured in the local news:
+            <a href="https://infotel.ca/newsitem/are-you-smarter-than-this-third-grader-kamloops-whiz-kid-takes-home-gold-in-math-competition/it53353" target="_blank">https://infotel.ca/newsitem/are-you-smarter-than-this-third-grader-kamloops-whiz-kid-takes-home-gold-in-math-competition/it53353</a>
+        </p>
+        </div>
+
+        <div class="about_par">
+        <p>
+            I love sports too. I am a multi-sport athlete. I have played soccer for 5 years; I am also on my school’s team for basketball, volleyball, track and field, and cross country. And I have won more than a dozen sports awards.
+        </p>
+        </div>
+
+        <div class="about_par">
+        <p>
+            I also like spending fun time with my family and friends. I like mountain biking, hiking, playing video games and board games, and watching movies with my family. I play a musical instrument called Harmonium and am also learning to play Tabla.
+        </p>
+        </div>
+        
+    </div>
+    
 </body>
 </html>
