--- a/templates/pages/troubleshoot.html
+++ b/templates/pages/troubleshoot.html
@@ -26,18 +26,32 @@
             <li><strong><a href="/about">About</a></strong></li>
         </ul>
     </nav>
-    <!-- <div class="space">
-    <p>   
-    </p>
-    </div> -->
+
+    <h4>
+
+    </h4>
     <h1>
-
-    </h1>
-    <div>
         <span><b>TROUBLESHOOT</b></span>
-    </div>
-        <p>Log into your GMAIL account to continue to our email listings and report an issue.</p>
-        <a href="https://groups.google.com/g/anti-drowsy-app">Post Issues</a>
+    </h1>
+    <p>
 
+    </p>
+    <div class="troubleshoot_body">
+        <h2>Log into your GMAIL account to continue to our email listings and report an issue.</h2>
+        <h3><a href="https://groups.google.com/g/anti-drowsy-app">Post Issues</a></h3>
+        <p>
+
+        </p>
+        <div class="img_troubleshoot">
+            <img src="{{ troubleshoot_image }}" alt="screen_repair_troubleshoot">
+        </div>
+    </div>
+    
+    
+
+    
+    
+    
+        
 </body>
 </html>
